--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,20 @@
                 android:name=".data.TodoListProvider"
                 android:exported="true"/>
 
+        <receiver android:name=".widget.TodoListWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/todo_list_widget_info"/>
+        </receiver>
+
+        <service android:name=".widget.TodoListWidgetRemoteViewsService"
+                 android:permission="android.permission.BIND_REMOTEVIEWS">
+        </service>
+
     </application>
 
 </manifest>
